tests/src/frontend/typechecking/invalid/late_static_const3.sk
base class Foo {
  const x: String;
  deferred static fun foo(): String {
    Foo::x
  }
}
